data/derived/comb/progs/unify/prog5047.ml.out
Characters 80-81:
  let separated = explode w in
                          ^
Error: This expression has type 'a list
       but an expression was expected of type string
